# PCR_Release

./: .gitignore  CMakeLists.txt  Dockerfile  PCR_Converter.py  PCR_Iterator.py  README.md  dali_main.py  docker_build.sh  init_repo.sh  progressive_utils.py
DatasetConversion/: ConvertCars.py
compat/: PCR_Converter_Advanced.py  PCR_Pipeline.py  README.md  dali_imagenet_bench_resnet18.sh  dali_imagenet_bench_resnet18_distributed_pcr.sh  docker_run.sh  install_python_deps.sh  metric.py  requirements.txt
compat/DatasetConversion/: ConvertCancer.py  ConvertCeleb.py
compat/include/: pcr.h
compat/python/: python_bindings.cpp
proto/: CMakeLists.txt  LightMLRecords.proto
src/: .gitignore  jsk.c  main.cpp  pcr.cpp
tensorflow/: PCR_Converter.py  README.md  data_prefetcher.py  imagenet_input.py  imagenet_preprocessing_input.py  init_repo.sh  loader_util.py  main.py  main_helper.py  run.sh  tf_util.py
tensorflow/pcr_util/: PCR_helper.py  PCR_importer.py
tensorflow/proto/: LightMLRecords.proto  progressive_compressed_record.proto
tensorflow/src/: scan_only_jsk.c
tensorflow/util/: autotune_util.py  pcr_util.py  transform_images.py
utils/: progressive_utils.py
